--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             }
         }
         audioEle.crossOrigin = 'anonymous';
-        audioEle.src = "https://webfs.ali.kugou.com/202304301642/be26237a3f3a3e1cdfbe08dbd3f222c9/KGTX/CLTX003/a7e08b19c6203260305f2800dbc2574a.mp3";
+        audioEle.src = "https://webfs.ali.kugou.com/202304302016/60841d34740dcdc50665bbdff0b6bf55/KGTX/CLTX001/0b5bfe9ff787959e61898a04647fa602.mp3"
         audioEle.onplay = function () {
             init();
         };
