--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="controls hand" id="ctrl">
         <div class="fakeprogress"></div>
     </div>
-    <audio controls></audio>
+    <audio></audio>
     <form>
         <input type="text" name="source" id="audioAdress">
         <input type="submit" value="确定" id="button">
