多了一个html文件

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
         <div class="ch" id="ch"></div>
     </form>
+    <a href="test.html"><h1>地理位置</h1></a>
     <script>
         const canvasEle = document.getElementsByTagName("canvas")[0];
         const audioEle = document.getElementsByTagName("audio")[0];
