--- a/test.html
+++ b/test.html
@@ -49,7 +49,6 @@
                 return div;
             }
             success (pos) {
-                console.log(Date.now()-this.startTime);
                 const p = pos.coords;
                 const df = new DocumentFragment()
                 df.appendChild(this.new_div("维度：", p.latitude));
@@ -59,6 +58,7 @@
                 df.appendChild(this.new_div("海拔精度：", p.altitudeAccuracy, "米"));
                 df.appendChild(this.new_div("方向：", p.heading, "度"));
                 df.appendChild(this.new_div("速度：", p.speed, "米/秒"));
+                df.appendChild(this.new_div("时间：", new Date(pos.timestamp)));
                 const wp = document.createElement('div');
                 wp.id = 'wrap';
                 wp.appendChild(df);
@@ -82,7 +82,6 @@
                             obj.error(e);
                         }
                     })(this),this.options)
-                    this.startTime = Date.now();
                 } else {
                     
                 }
@@ -98,7 +97,11 @@
                         return function (e){
                             obj.error(e);
                         }
-                    })(this),this.options)
+                    })(this), {
+                        enableHighAccuracy: true,
+                        timeout: 5000,
+                        maximumAge: 1000
+                    })
                     this.startTime = Date.now();
                 } 
             }
