--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="ch" id="ch"></div>
     </form>
     <a href="test.html"><h1>地理位置</h1></a>
+    <a href="canvas.html"><h1>画布</h1></a>
     <script>
         const canvasEle = document.getElementsByTagName("canvas")[0];
         const audioEle = document.getElementsByTagName("audio")[0];
@@ -181,6 +182,7 @@
         }
         function canvasWidthReset() {
             canvasEle.width = parseInt(getComputedStyle(document.querySelector('.wrapper')).width);
+            canvasEle.height = 255;
         }
         canvasWidthReset();
         
