--- a/canvas.html
+++ b/canvas.html
@@ -289,7 +289,7 @@
                     }
                     arr = Array.from(new Set(arr));
                     const len = arr.length;
-                    const result = [];
+                    var result = [];
                     if (str == '.') {
                         this.s = '';
                         result = arr;
