--- a/particle.html
+++ b/particle.html
@@ -22,8 +22,8 @@
         const canvas = document.getElementsByTagName("canvas")[0];
         const c = canvas.getContext("2d", {willReadFrequently: true});
         function initCanvasSize() {
-            canvas.width = window.innerWidth * devicePixelRatio;
-            canvas.height = window.innerHeight * devicePixelRatio;
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
         }
         initCanvasSize();
 
@@ -53,26 +53,17 @@
                     this.x = centerX + r * Math.cos(rad);
                     this.y = centerY + r * Math.sin(rad);
                 }
-                this.size = getRandom(2 * devicePixelRatio, 7 * devicePixelRatio);
+                this.size = getRandom(1, 3);
             }
 
             draw () {
                 c.beginPath();
                 c.fillStyle = "#ff80f5ff";
-                switch (this.size / devicePixelRatio) {
-                    case 3:
-                        c.fillStyle = "#ff80f5dd";
-                        break;
-                    case 4:
-                        c.fillStyle = "#ff80f5bb";
-                        break;
-                    case 5:
+                switch (this.size) {
+                    case 2:
                         c.fillStyle = "#ff80f599";
                         break;
-                    case 6:
-                        c.fillStyle = "#ff80f577";
-                        break;
-                    case 7:
+                    case 3:
                         c.fillStyle = "#ff80f555";
                         break;
                     default:
@@ -122,6 +113,7 @@
         }
         var text = "";
         var newText = location.href.split('?')[1] || "Hello World";
+        newText = decodeURI(newText);
         function update () {
             if (text == newText) {
                 return;
@@ -130,7 +122,7 @@
             c.fillStyle = "#fff";
             c.textBaseline = 'middle';
             c.textAlign = 'center';
-            c.font = (140 * devicePixelRatio)+"px Arial";
+            c.font = "70px Arial";
             c.fillText(text, canvas.width/2, canvas.height/2);
             const points = getPoints();
             clear()
@@ -154,7 +146,7 @@
         function getPoints() {
             const points = c.getImageData(0,0,canvas.width,canvas.height);
             const result = [];
-            const gap = 6;
+            const gap = 2;
             for (let i = 0; i < points.width; i+=gap) {
                 for (let j = 0; j < points.height; j+=gap) {
                     const index = (i + j * points.width) * 4;
